# A-LLM-

./: .gitattributes  .gitignore  README.md  data_source_gap_matrix.csv  environment.yml  ifind_probe_manifest.json  pyproject.toml  requirements.txt
config/: backtest_config.yaml  data_source_registry.yaml  experiment_registry.csv  factor_config.yaml  ifind_field_mapping.example.yaml  project_config.yaml  research_protocol.real.example.yaml  research_protocol.real.yaml  research_protocol.yaml
data/sample/: README.md  benchmark_index.csv  daily_bar.csv  daily_basic.csv  financial_indicator.csv  index_member.csv  industry.csv  limit_price.csv  news_event.csv  st_status.csv  stock_basic.csv  suspension.csv  trade_calendar.csv
docs/: data_dictionary.md  historical_directories.md  improvement_plan_implementation.md  interview_notes.md  repository_management.md
docs/plans/: A股多因子量化研究实现计划.md  README.md  时间序列研究执行计划.md  项目模块总结与改进计划.md
notebooks/: 01_data_collection.ipynb  02_data_cleaning.ipynb  03_factor_construction.ipynb  04_factor_test.ipynb  05_backtest.ipynb  06_risk_attribution.ipynb  07_llm_event_analysis.ipynb  README.md
reports/: factor_research_report.md  ifind_capability_probe.md  ifind_license_and_permission_checklist.md  implementation_status.md  kimi_cli_capability_report.md  kimi_handoff_review.md
reports/advisor/: A股多因子研究框架阶段性项目报告_导师汇报版.md  README.md  导师汇报_A股多因子选股策略研究_候选终版.docx
reports/data_sources/: README.md  akshare_probe2_20260719.json  akshare_probe3_20260719.json  akshare_probe_20260719.json  benchmark_index_review.md  daily_bar_review.md  daily_basic_review.md  financial_indicator_review.md  index_member_review.md  industry_review.md  limit_price_review.md  news_event_review.md  signoff_sheet_20260719.md  st_status_review.md  缺口数据提供规范.md  (+3 more)
scripts/: assemble_stage1d_staging.py  build_advisor_report_docx.py  build_report_pdf.py  fetch_data.py  fetch_stage1d_real.py  generate_sample_data.py  probe_akshare_stage1d.py  probe_ifind.py  quality_check.py  smoke_notebooks.py
tests/: test_backtest.py  test_data_engineering.py  test_factor_processor.py  test_factor_registry_coverage.py  test_factor_testing.py  test_ifind_gate.py  test_improvement_plan.py  test_notebook_smoke.py  test_performance_attribution.py  test_phase23.py  test_qfq_factor_correction.py  test_real_data_gate.py  test_research_governance.py  test_smoke_pipeline.py  test_time_series.py
(+135 files in other folders)
